--- a/app.json
+++ b/app.json
@@ -1,11 +1,14 @@
 {
-  "name": "Ubuntu-RDP-Heroku",
-  "buildpacks": [
-    {
-      "url": "heroku/docker"
-    }
-  ],
-  "scripts": {
-    "postdeploy": "start.sh"
-  }
+    "name": "Heroku VPS 24/7 #RixEtte",
+    "description": "Deploy noVNC to Heroku.",
+    "keywords": [
+        "VNC",
+        "Docker",
+        "noVNC"
+    ],
+    "env": {},
+    "website": "",
+    "repository": "https://github.com/RixEtte/vps-heroku.git",
+    "logo": "https://raw.githubusercontent.com/RixEtte/vps-heroku/main/58480873cef1014c0b5e48ea.png",
+    "stack": "container"
 }
